--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,12 @@
 body {
   padding: 40px;
   text-align: center;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 70px;
   background-image: linear-gradient(to top, #ff001f, #ff6200, #ff9500, #f9c200, #eaeb12);
+
+}
+
+.form-group {
+  text-align: left;
+
 }
