--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,18 @@
 body {
-  padding: 40px;
+  padding: -30px;
   text-align: center;
   margin: 70px;
-  background-image: linear-gradient(to top, #ff001f, #ff6200, #ff9500, #f9c200, #eaeb12);
+  background-image: linear-gradient(to top, #ff001f, #ff9500, #f9c200, #eaeb12);
 
+}
+
+h1 {
+  font-family: 'Fredoka One', cursive;
 }
 
 .form-group {
   text-align: left;
+  margin-right: 70px;
+  margin-left: 70px;
 
 }
