--- a/css/styles.css
+++ b/css/styles.css
@@ -5,13 +5,18 @@ img {
 }
 
 body {
-  /* padding: -30px; */
   font-family: 'Fredoka One', cursive;
   text-align: center;
-  /* margin: 70px; */
-
+  background-color: #4DE3F5;
 }
 
+.container-fluid {
+  background-color:#E6F4F1;
+}
+
+.active, .btn {
+  background-color:#D57FC8;
+}
 h1 {
   font-family: 'Fredoka One', cursive;
 }
