--- a/css/styles.css
+++ b/css/styles.css
@@ -40,4 +40,12 @@ background-color: rgba(255,255,255,0.4);
 
 }
 
+.col-md-6 {
+  text-align: left;
+  margin: auto;
+  padding-bottom: 25px;
+  padding-top: 10px;
+
+}
+
 
